@@ -1,33 +1,27 @@
-package com.jnu.festival.domain.zone.Service;
+package com.jnu.festival.domain.zone.service;
 
-import com.jnu.festival.domain.partner.Repository.PartnerJPARepository;
-import com.jnu.festival.domain.zone.DTO.ZoneRequestDto;
-import com.jnu.festival.domain.zone.Entity.Location;
-import com.jnu.festival.domain.zone.Entity.Zone;
-import com.jnu.festival.domain.zone.Repository.ZoneRepository;
-import jakarta.transaction.Transactional;
+import com.jnu.festival.domain.zone.dto.response.ZoneListDto;
+import com.jnu.festival.domain.zone.entity.Zone;
+import com.jnu.festival.domain.zone.repository.ZoneRepository;
+import com.jnu.festival.global.common.Location;
 import lombok.RequiredArgsConstructor;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
 public class ZoneService {
     private final ZoneRepository zoneRepository;
 
-    @Autowired
-    public ZoneService(ZoneRepository zoneRepository){
-        this.zoneRepository = zoneRepository;
-    }
-
-    //zone 조회
-
-    public List<ZoneRequestDto> getZoneByQuery(Location location){
-        List<Zone> zones = zoneRepository.findByLocation(location);
+    public List<ZoneListDto> readZoneList(String location){
+        List<Zone> zones = zoneRepository.findAllByLocation(Location.from(location));
         return zones.stream()
-                .map(Zone -> new ZoneRequestDto(Zone.getId(),Zone.getTitle(),Zone.getLocation(),Zone.getDescription()))
-                .collect(Collectors.toList());
+                .map(zone -> ZoneListDto.builder()
+                        .id(zone.getId())
+                        .name(zone.getName())
+                        .description(zone.getDescription())
+                        .build())
+                .toList();
     }
 }
